--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Nekohime Tsukino's Translations</h1>
-<p>My First Love Partner Was Kissing <a href="https://drive.google.com/file/d/1F1YSZLrISfKrtuAUtfLKDHBSrgLh9gbd/view?usp=share_link">pdf</a> epub</p>
+<p>Open in Google Drive:</p>
+<p>My First Love Partner Was Kissing Vol.1 Chapters 1-2 (in progress) <a href="https://drive.google.com/file/d/1F1YSZLrISfKrtuAUtfLKDHBSrgLh9gbd/view?usp=share_link" target="_blank" rel="noopener noreferrer">pdf</a></p>
 </body>
 </html>
