--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Nekohime Tsukino's Translations</h1>
 <p>Open in Google Drive:</p>
-<p>My First Love Partner Was Kissing Vol.1 Chapters 1-2 (in progress) <a href="https://drive.google.com/file/d/1F1YSZLrISfKrtuAUtfLKDHBSrgLh9gbd/view?usp=share_link" target="_blank" rel="noopener noreferrer">pdf</a></p>
+<p>My First Love Partner Was Kissing Vol.1 Chapters 1-2 (in progress) <a href="https://drive.google.com/file/d/1a0RR-SieeHGubtAMnOGVAq0G_sjOA_Ms/view?usp=share_link" target="_blank" rel="noopener noreferrer">PDF</a> <a href="https://drive.google.com/file/d/10ysw6d21kKGQ9tjdo8UhpeWECaZwN8IA/view?usp=share_link" target="_blank" rel="noopener noreferrer">EPUB</a></p>
 </body>
 </html>
