--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Nekohime Tsukino's Translations</h1>
+<h1>Nekohime's Yuri Translations</h1>
 <p>Open in Google Drive:</p>
 <p>My First Love Partner Was Kissing Vol.1 Chapters 1-2 (in progress) <a href="https://drive.google.com/file/d/1a0RR-SieeHGubtAMnOGVAq0G_sjOA_Ms/view?usp=share_link" target="_blank" rel="noopener noreferrer">PDF</a> <a href="https://drive.google.com/file/d/10ysw6d21kKGQ9tjdo8UhpeWECaZwN8IA/view?usp=share_link" target="_blank" rel="noopener noreferrer">EPUB</a></p>
 </body>
