--- a/index.html
+++ b/index.html
@@ -1,8 +1,96 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Nekohime's Yuri Translations</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #5a3274;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #5a3274;
+      color: #fff;
+      text-decoration: none;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #412659;
+    }
+
+    .info-text {
+      font-style: italic;
+      color: #888;
+    }
+  </style>
+</head>
 <body>
-<h1>Nekohime's Yuri Translations</h1>
-<p>Open in Google Drive:</p>
-<p>My First Love Partner Was Kissing Vol.1 Chapters 1-2 (in progress) <a href="https://drive.google.com/file/d/1a0RR-SieeHGubtAMnOGVAq0G_sjOA_Ms/view?usp=share_link" target="_blank" rel="noopener noreferrer">PDF</a> <a href="https://drive.google.com/file/d/10ysw6d21kKGQ9tjdo8UhpeWECaZwN8IA/view?usp=share_link" target="_blank" rel="noopener noreferrer">EPUB</a></p>
+  <header>
+    <h1>Nekohime's Yuri Translations</h1>
+  </header>
+
+  <div class="container">
+    <p>
+      <strong>Welcome to Nekohime's Yuri Translations!</strong>
+    </p>
+    <p>
+      Here you can find the ongoing translation of "My First Love Partner Was Kissing",【私の初恋相手がキスしてた】by Hitoma Iruma, abbreviated as "Hatsukoi Kisu".
+    </p>
+    <p>
+The latest version - 0.1.3 (April 23, 2023) covers volume 1, chapters 1-2.
+    </p>    
+
+    <p>Download the PDF and EPUB versions:</p>
+    <p>
+      <a class="button" href="https://drive.google.com/file/d/1a0RR-SieeHGubtAMnOGVAq0G_sjOA_Ms/view?usp=share_link" target="_blank" rel="noopener noreferrer">Download PDF</a>
+      <a class="button" href="https://drive.google.com/file/d/10ysw6d21kKGQ9tjdo8UhpeWECaZwN8IA/view?usp=share_link" target="_blank" rel="noopener noreferrer">Download EPUB</a>
+    </p>
+    <p>
+The download links will update as new chapters get released.
+    </p>
+
+    <p>
+      Join the Adachi and Shimamura Discord server for the latest news on the translation:
+    </p>
+    <p>
+      <a class="button" href="https://discord.gg/A6vpjFzGdv" target="_blank" rel="noopener noreferrer">Join Discord</a>
+    </p>
+    <p>
+      You can buy a digital copy in Japanese to support the author at:
+    </p>
+    <p>
+      <a class="button" href="https://bookwalker.jp/series/334918/list/">BOOK☆WALKER</a> <a class="button" href="https://www.amazon.co.jp/dp/B09YRCB2XB/">Amazon</a>
+    </p>
+  </div>
 </body>
 </html>
