--- a/index.html
+++ b/index.html
@@ -64,21 +64,15 @@
       <strong>Welcome to Nekohime's Yuri Translations!</strong>
     </p>
     <p>
-      Here you can find the ongoing translation of "My First Love Partner Was Kissing",【私の初恋相手がキスしてた】by Hitoma Iruma, abbreviated as "Hatsukoi Kisu".
+      Here you can find my translation of "My First Love Partner Was Kissing",【私の初恋相手がキスしてた】by Hitoma Iruma, abbreviated as "Hatsukoi Kisu".
     </p>
     <p>
-The latest version - 0.2.1 (November 9, 2023) covers volume 1, chapters 1-3.
+The latest version - 1.0 (Febraury 14, 2024) covers volume 1 plus 2 short stories.
     </p>    
-
-    <p>Download the PDF and EPUB versions:</p>
     <p>
-      <a class="button" href="https://drive.google.com/file/d/1a0RR-SieeHGubtAMnOGVAq0G_sjOA_Ms/view?usp=share_link" target="_blank" rel="noopener noreferrer">Download PDF</a>
-      <a class="button" href="https://drive.google.com/file/d/10ysw6d21kKGQ9tjdo8UhpeWECaZwN8IA/view?usp=share_link" target="_blank" rel="noopener noreferrer">Download EPUB</a>
+      <a class="button" href="https://drive.google.com/file/d/1MzVrEgQXBSsoKF2LFpsaMTeiXWxEPZt7/view?usp=sharing" target="_blank" rel="noopener noreferrer">Download PDF</a>
+      <a class="button" href="https://drive.google.com/file/d/17KBwDluDs0pQ7QO9e3sHpb6q-m-8_TTi/view?usp=sharing" target="_blank" rel="noopener noreferrer">Download EPUB</a>
     </p>
-    <p>
-The download links will update as new chapters get released.
-    </p>
-
     <p>
       Join the Adachi and Shimamura Discord server for the latest news on the translation:
     </p>
@@ -90,6 +84,9 @@ The download links will update as new chapters get released.
     </p>
     <p>
       <a class="button" href="https://bookwalker.jp/series/334918/list/">BOOK☆WALKER</a> <a class="button" href="https://www.amazon.co.jp/dp/B09YRCB2XB/">Amazon</a>
+    </p>
+    <p>
+This project is currently on hiatus. Thank you to everyone for reading!
     </p>
   </div>
 </body>
